--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -3,3 +3,6 @@
   <text class="title">Hello World</text>
   <button size="mini" class="btn">按钮</button>
 </view>
+
+<view>1.知识点1</view>
+<view>1.知识点1</view>
